Added authors site interface

--- a/blog-api-frontend-author/src/App.css
+++ b/blog-api-frontend-author/src/App.css
@@ -19,7 +19,7 @@ body {
   height: 100vh;
 }
 
-.mainLoginSection, .mainSignupSection, .mainSection {
+.mainSection {
   display: flex;
   justify-content: center;
   flex:auto;
