--- a/blog-api-frontend-author/src/modules/HomePage/HomePage.css
+++ b/blog-api-frontend-author/src/modules/HomePage/HomePage.css
@@ -1,7 +1,7 @@
 
 .mainSection {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex:auto;
     flex-direction: column;
   }
