--- a/blog-api-frontend-author/src/App.css
+++ b/blog-api-frontend-author/src/App.css
@@ -5,10 +5,20 @@
   width: 100%
 }
 
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
 .fullDisplay {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 form {
