--- a/blog-api-frontend-author/src/modules/LoginPage/LoginPage.css
+++ b/blog-api-frontend-author/src/modules/LoginPage/LoginPage.css
@@ -3,3 +3,8 @@
     justify-content: center;
     flex:auto;
   }
+
+  .loginForm button {
+    margin-top: 30px;
+    border: 1px black solid;
+  }
