--- a/blog-api-frontend/src/App.css
+++ b/blog-api-frontend/src/App.css
@@ -17,12 +17,14 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  width: min-content;
-  align-items: center;
+  width: 100%;
+  align-items: normal;
   gap: 5px;
 }
